2002-07-08  Vince Darley <vincentdarley@sourceforge.net>
	* generic/vfs.c: update for latest cvs head.
	* win/makefile.vc: compilation into Release and Debug
	directories as appropriate.
	
2002-06-22  Jean-Claude Wippler <jcw@equi4.com>
	* mac/pkgIndex_mac.tcl:
	* library/pkgIndex.tcl:
	* library/mk4vfs.in: fix recursive file deletion, bump to 1.5

2002-05-29  Jean-Claude Wippler <jcw@equi4.com>
	* Makefile.in: moved the definition of $(OBJEXT) up so the
	definition of vfs_OBJECTS works with more make's

2002-05-13  Vince Darley <vincentdarley@sourceforge.net>
	* library/webdavvfs.tcl: v. early implementation of a webdav
	vfs.  (Note: this and the 'http' vfs need lots of work --
	please help out!).  This requires the '2.6' version of the http
	package which is distributed with tclvfs.
	
2002-05-13  Vince Darley <vincentdarley@sourceforge.net>
	* library/mk4vfs.tcl: newer version from tclkit.

2002-05-03  Vince Darley <vincentdarley@sourceforge.net>
	* tests/*: more test improvements, and new file vfsArchive.test
	which will test the running of the tests inside an archive. 
	This requires recursive invocation of the 'tcltest' package,
	which may well cause some problems if it isn't designed to
	handle that (i.e. executing one test actually causes the
	execution of a lot of other tests).
	* library/pkgIndex.tcl: update to try to avoid the 'no such
	command vfs::*::Mount' error messages which you can get, if
	the relevant .tcl files are not on your auto_path.

2002-05-02  Vince Darley <vincentdarley@sourceforge.net>
	* tests/vfs.test: tests work independent of directory in which
	they run.  Tests added to check that at least 'vfs::memchan'
	basically works, and vfs::zip, vfs::crc helpers do what they
	are supposed to.
	* tests/vfsZip.test: test to run all tests inside a zip.
	* mac/*: updated for removal of scripdoc.tcl and vfs.tcl
	
2002-04-25  Jean-Claude Wippler <jcw@equi4.com>
	* library/*vfs.tcl: switching to vfs::{crc,memchan,zip}